<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <android.support.v7.widget.Toolbar
        android:id="@+id/tool_bar"
        style="@style/ToolBarStyle"
        android:layout_width="match_parent"
        android:layout_height="@dimen/tool_bar_height">

        <TextView
            style="@style/ToolBarTitleTextAppearance.Light"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/job_group" />
    </android.support.v7.widget.Toolbar>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="8dp"
        android:paddingLeft="15dp"
        android:paddingTop="8dp"
        android:text="选择工作种类"
        android:textSize="12sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/white"
        android:orientation="vertical"
        android:paddingLeft="15dp"
        android:paddingRight="15dp">

        <TextView
            android:id="@+id/freelance"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableRight="@drawable/job_group_selection"
            android:paddingBottom="15dp"
            android:paddingTop="15dp"
            android:text="@string/freelance"
            android:textColor="@android:color/black" />

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@color/common_bg" />

        <TextView
            android:id="@+id/worker"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableRight="@drawable/job_group_selection"
            android:paddingBottom="15dp"
            android:paddingTop="15dp"
            android:text="@string/worker"
            android:textColor="@android:color/black" />

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@color/common_bg" />

        <TextView
            android:id="@+id/household"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableRight="@drawable/job_group_selection"
            android:paddingBottom="15dp"
            android:paddingTop="15dp"
            android:text="@string/household"
            android:textColor="@android:color/black" />
    </LinearLayout>
</LinearLayout>